# microcard

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  compose.yaml  run.bash
abi/: Cargo.toml
abi/src/: bet_chip_profile.rs  blackjack.rs  chipset.rs  chipset_profile.rs  deck.rs  lib.rs  player_dealer.rs  poker.rs
abi/tests/: calculate_hand_value_test.rs
bankroll/: Cargo.toml
bankroll/src/: contract.rs  lib.rs  service.rs  state.rs
blackjack/: Cargo.toml
blackjack/src/: contract.rs  lib.rs  service.rs  state.rs
frontend/web/: .last_build_id  flutter_bootstrap.js  flutter_service_worker.js  index.html  main.dart.mjs  manifest.json  version.json
frontend/web/assets/: AssetManifest.bin.json  AssetManifest.json  NOTICES
frontend/web/assets/assets/graphql/mutation/: add_play_chain.graphql  bet.graphql  deal_bet.graphql  exit_single_player_game.graphql  find_play_chain.graphql  get_balance.graphql  hit.graphql  mint_token.graphql  request_table_seat.graphql  stand.graphql  start_single_player_game.graphql  subscribe_to.graphql  unsubscribe_from.graphql
frontend/web/assets/assets/graphql/query/: get_balances.graphql  get_deck.graphql  get_play_chains.graphql  get_profile.graphql  get_user_status.graphql  multi_player_data.graphql  single_player_data.graphql
frontend/web/assets/assets/old-graphql/mutation/: action.graphql  (+2 more)
house/: Cargo.toml
house/src/: contract.rs  lib.rs  service.rs  state.rs
tests/: kill_test_run_multi_node.sh  single_player.sh  test_run_multi_node.sh  test_run_single_node.sh  test_run_single_node_v2.sh
(+9 files in other folders)
